2002-01-05  Werner Koch  <wk@gnupg.org>

	* asn1-func.c (_ksba_asn_find_node): Moved code to ..
	(find_node): new function which allows resolving of identifiers.
	(_ksba_asn_expand_tree): Use the resolving find_node here.

	* keyinfo.c (_ksba_parse_algorithm_identifier2): Reset len2 so
	that a given r_parm returns correct values.

	* ksba.h (KsbaCRL): New typedef and prototypes for the CRL functions.
	* crl.c, crl.h: New but not yet complete.

2001-12-20  Werner Koch  <wk@gnupg.org>

	* cms.c (read_and_hash_cont): New.
	(ct_parse_signed_data): Use it here for non-detached signatures.
	* cms-parser.c (_ksba_cms_parse_signed_data_part_1): Store the
	inner content length.
	(_ksba_cms_parse_signed_data_part_2): Add dummy read code for CRLs.

	* cert.c (ksba_cert_set_serial): Changed to return an entire S-Exp
	and not just an octet string.
	* cms.c (ksba_cms_get_issuer_serial): Ditto.

2001-12-18  Werner Koch  <wk@gnupg.org>

	* Makefile.am (DISTCLEANFILES): Add asn1-tables.c

2001-12-17  Werner Koch  <wk@gnupg.org>

	* cert.c (ksba_cert_get_serial): Does now return a S-expression.
	* cms.c (ksba_cms_get_issuer_serial): Ditto.

	* keyinfo.c: Changed all functions to return canonical encoded S-Exp.

	* Makefile.am (asn1-tables.c): Fixed rule to work with VPATH builds.

2001-12-14  Werner Koch  <wk@gnupg.org>

	* oid.c, time.c, cms.c : Moved atoi macros and digitp macro to ..
	* util.h: .. here.  Fixed digitp macro.  Added hexdigitp.

2001-12-13  Werner Koch  <wk@gnupg.org>

	* cert.c (ksba_cert_get_issuer): Added an idx argument so that the
	function can be used to enumerate alternate names. 
	(ksba_cert_get_subject): Ditto.
	

 Copyright 2001, 2002 g10 Code GmbH

 This file is free software; as a special exception the author gives
 unlimited permission to copy and/or distribute it, with or without
 modifications, as long as this notice is preserved.

 This file is distributed in the hope that it will be useful, but